--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,20 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4"
-      routerLink="/detail/{{hero.id}}">
+  <a *ngFor="let item of topItems" class="col-1-4"
+      routerLink="/detail/{{item.id}}">
     <div class="module hero">
-      <h4>{{hero.name}}</h4>
+      <h4>{{item.name}}</h4>
     </div>
   </a>
 </div>
-
+<br>
 <app-hero-search></app-hero-search>
+
+<div>
+  <a *ngFor="let item of items" class="itemList"
+      routerLink="/detail/{{item.id}}">
+    <div class="module2">
+      <h4>{{item.name}}</h4>
+    </div>
+  </a>
+</div>
