--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,21 @@
-<div *ngIf="hero">
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{hero.id}}</div>
+<div *ngIf="item">
+  <h2>{{ item.name | uppercase }} Details</h2>
+  <!--<div><span>id: </span>{{item.id}}</div>-->
   <div>
-    <label>name:
-      <input [(ngModel)]="hero.name" placeholder="name"/>
+    <label>id: {{ item.id }}
+      <!--<input [(ngModel)]="item.name" placeholder="name"/>-->
+    </label>
+  </div>
+  <div>
+    <label>source: {{ item.source }}
+      <!--<input [(ngModel)]="item.name" placeholder="name"/>-->
+    </label>
+  </div>
+  <div>
+    <label>instance type: {{ item.inst_type }}
+      <!--<input [(ngModel)]="item.name" placeholder="name"/>-->
     </label>
   </div>
   <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+  <!--<button (click)="save()">save</button>-->
 </div>
