--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,7 @@
 <div class="col-md-6 col-md-offset-3">
-    <h1>Hi {{currentUser.firstName}}!</h1>
-    <p>You're logged in with Angular 2!!</p>
-    <h3>All registered users:</h3>
-    <ul>
-        <li *ngFor="let user of users">
-            {{user.username}} {{user.firstName}} {{user.lastName}}
-            - <a (click)="deleteUser(user.id)">Delete</a>
-        </li>
-    </ul>
+    <h1>Hi {{currentUser.username}}!</h1>
+    <p>You're logged!!</p>
+    <p>Welcome to your portfolio management application!</p>
+
     <p><a [routerLink]="['/login']">Logout</a></p>
 </div>
