added portfolio page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
         <div class="col-sm-8 col-sm-offset-2">
             <nav>
               <a routerLink="/dashboard">Dashboard</a>
-              <a routerLink="/heroes">Heroes</a>
+              <a routerLink="/portfolio">Portfolio</a>
+              <a routerLink="/items">List of items</a>
               <a routerLink="/historical">Historical Data</a>
             </nav>
             <alert></alert>
