--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,11 +1,11 @@
 /* HeroesComponent's private CSS styles */
-.heroes {
+.items {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
-.heroes li {
+.items li {
   position: relative;
   cursor: pointer;
   background-color: #EEE;
@@ -15,13 +15,13 @@
   border-radius: 4px;
 }
 
-.heroes li:hover {
+.items li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
 
-.heroes a {
+.items a {
   color: #888;
   text-decoration: none;
   position: relative;
@@ -29,11 +29,11 @@
   width: 250px;
 }
 
-.heroes a:hover {
+.items a:hover {
   color:#607D8B;
 }
 
-.heroes .badge {
+.items .badge {
   display: inline-block;
   font-size: small;
   color: white;
@@ -71,4 +71,3 @@ button.delete {
   background-color: gray !important;
   color: white;
 }
-
