mowhen I wrote this code, only god and I understood this code... now only god does. Comments left!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
               <a routerLink="/portfolio">Portfolio</a>
               <a routerLink="/items">List of items</a>
               <a routerLink="/historical">Historical Data</a>
+              <a routerLink="/login">Logout</a>
             </nav>
             <alert></alert>
             <router-outlet></router-outlet>
