--- a/src/app/historical-display/historical-display.component.css
+++ b/src/app/historical-display/historical-display.component.css
@@ -1,4 +1,4 @@
-/* HeroesComponent's private CSS styles */
+/* ItemsComponent's private CSS styles */
 .dataPoints {
   margin: 0 0 2em 0;
   list-style-type: none;
